--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/15.0.7/marked.min.js"></script>
   <script src="/js/libs/_legacy.js"></script>
   <script type="module" src="/js/libs/_all-globalized.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/simple-statistics@7.8.3/dist/simple-statistics.min.js"></script>
+
 </body>
 
 </html>
