--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
   <script src="/js/libs/_legacy.js"></script>
   <script type="module" src="/js/libs/_all-globalized.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/simple-statistics@7.8.3/dist/simple-statistics.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jstat@latest/dist/jstat.min.js"></script>
+
 
 </body>
 
